// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`index check connection - authentication missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "Only token authentication is supported",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - invalid bucketing config - non positive integer 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "bucket_total must be a positive integer",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - invalid bucketing config - out of range 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "bucket_id must be between 1 and 2",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token missing 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "message": "GitLab authentication failed. Please check your API token and permissions: Response code 401 (Unauthorized)",
    "status": "FAILED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index check connection - token valid 1`] = `
AirbyteConnectionStatusMessage {
  "connectionStatus": {
    "status": "SUCCEEDED",
  },
  "type": "CONNECTION_STATUS",
}
`;

exports[`index round robin bucket execution 1`] = `
{
  "__bucket_execution_state": {
    "last_executed_bucket_id": 2,
  },
}
`;

exports[`index streams - faros groups 1`] = `
[
  {
    "created_at": "2021-01-01T00:00:00Z",
    "description": "Test group description",
    "id": "1",
    "name": "Test Group",
    "parent_id": null,
    "path": "test-group",
    "updated_at": "2021-01-01T00:00:00Z",
    "visibility": "public",
    "web_url": "https://gitlab.com/test-group",
  },
]
`;

exports[`index streams - faros projects 1`] = `
[
  {
    "archived": false,
    "created_at": "2021-01-01T00:00:00Z",
    "default_branch": "main",
    "description": "Test project description",
    "group_id": "1",
    "id": "123",
    "name": "Test Project",
    "namespace": {
      "full_path": "test-group",
      "id": "1",
      "kind": "group",
      "name": "Test Group",
      "path": "test-group",
    },
    "path": "test-project",
    "path_with_namespace": "test-group/test-project",
    "syncRepoData": true,
    "updated_at": "2021-06-01T00:00:00Z",
    "visibility": "public",
    "web_url": "https://gitlab.com/test-group/test-project",
  },
]
`;

exports[`index streams - faros users 1`] = `
[
  {
    "created_at": "2021-01-01T00:00:00Z",
    "email": "user1@example.com",
    "group": "test-group",
    "id": 1,
    "name": "Test User 1",
    "state": "active",
    "updated_at": "2021-01-01T00:00:00Z",
    "username": "user1",
    "web_url": "https://gitlab.com/user1",
  },
  {
    "created_at": "2021-02-01T00:00:00Z",
    "email": "user2@example.com",
    "group": "test-group",
    "id": 2,
    "name": "Test User 2",
    "state": "active",
    "updated_at": "2021-02-01T00:00:00Z",
    "username": "user2",
    "web_url": "https://gitlab.com/user2",
  },
]
`;
